@@ -1,5 +1,6 @@
 2010-05-10
 * add a simple check for wpa_supplicant
+* use data from the knowledgebase to report additional data
 
 2010-05-09
 * add a script for creating a knowledgebase and fill it with some test data
